--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 img {
@@ -68,8 +67,7 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -106,8 +104,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -213,9 +210,9 @@ select {
    * Correct the inability to style clickable types in iOS and Safari.
    */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -223,9 +220,9 @@ button,
    * Remove the inner border and padding in Firefox.
    */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -234,9 +231,9 @@ button::-moz-focus-inner,
    * Restore the focus styles unset by the previous rule.
    */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -254,8 +251,7 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -287,10 +283,9 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -299,8 +294,8 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -308,7 +303,7 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -318,7 +313,7 @@ textarea {
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -375,7 +370,7 @@ template {
 @font-face {
     font-family: "Source Sans Pro";
     src: url(../../source-sans-pro/SourceSansPro-Regular.otf);
-  
+
     font-weight: bold;
 }
 
@@ -390,42 +385,36 @@ template {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
   font-weight: bold;
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-BoldIt.otf");
   font-style: italic;
 }
-
 .cabecalho {
   background: #edeff1;
   margin: 0 -15px;
   position: fixed;
   width: 100%;
   /*
-    @media(max-width: $breakpoint-md) {
-        & {
-            height: 70px;
-        }
-    }
-    */
+  @media(max-width: $breakpoint-md) {
+      & {
+          height: 70px;
+      }
+  }
+  */
 }
-
 .cabecalho-home {
   padding: 150px;
 }
-
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
   .cabecalho .logo {
     float: left;
@@ -438,7 +427,6 @@ template {
     margin-top: 35px;
   }
 }
-
 @media (min-width: 768px) {
   .cabecalho .logo {
     margin-top: 18px;
@@ -461,25 +449,21 @@ html {
   padding-right: 15px;
   overflow: auto;
 }
-
 @media (min-width: 576px) {
   .container {
     width: 540px;
   }
 }
-
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
 }
-
 @media (min-width: 992px) {
   .container {
     width: 960px;
   }
 }
-
 @media (min-width: 1200px) {
   .container {
     width: 1140px;
@@ -497,34 +481,28 @@ html {
   color: #fff;
   padding: 30px 0;
 }
-
 .depoimentos__item {
   padding: 0px 15px;
 }
-
 .depoimentos__img {
   display: block;
   margin: 0 auto;
-  -webkit-box-shadow: 2px 2px 0 black;
-          box-shadow: 2px 2px 0 black;
+  box-shadow: 2px 2px 0 black;
   margin-bottom: 30px;
 }
-
 .depoimentos__pessoa {
   text-align: center;
   font-weight: bold;
   font-style: italic;
 }
-
 .depoimentos__texto {
   line-height: 23px;
   padding: 0px 8px;
 }
-
 .depoimentos__texto::before {
   background-image: url(imagens/img/aspas.png);
   background-repeat: no-repeat;
-  content: '';
+  content: "";
   display: inline-block;
   width: 25px;
   height: 23px;
@@ -540,8 +518,7 @@ html {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 40px 15px;
-  -webkit-box-shadow: 0px 3px 10px #000;
-          box-shadow: 0px 3px 10px #000;
+  box-shadow: 0px 3px 10px #000;
 }
 
 .formulario_campo {
@@ -571,7 +548,6 @@ html {
   margin: 0;
   margin-left: 15px;
 }
-
 @media (max-width: 768px) {
   .logo {
     margin-top: 5px;
@@ -617,31 +593,25 @@ html {
   top: 15px;
   right: 15px;
 }
-
 @media (min-width: 768px) {
   .menu-principal__btn {
     display: none;
   }
 }
-
 .menu-principal__lista {
   padding: 0%;
-  -webkit-transition: margin 300ms ease-out;
   transition: margin 300ms ease-out;
 }
-
 @media (min-width: 768px) {
   .menu-principal__lista li {
     display: inline-block;
     margin: 0px 10px;
   }
 }
-
 .menu-principal__lista li {
   margin-left: 15px;
   list-style: none;
 }
-
 .menu-principal__item {
   margin-bottom: 20px;
   display: block;
@@ -649,14 +619,11 @@ html {
   font-weight: bold;
   color: #343434;
   font-size: 18px;
-  -webkit-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
-
 .menu-principal__item--atual {
   color: #f44242;
 }
-
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
     background-position: 5px 5px;
@@ -764,7 +731,7 @@ html {
 }
 
 .lista_item::before {
-  content: '>';
+  content: ">";
   margin-right: 8px;
   color: #f44242;
 }
@@ -819,7 +786,6 @@ img {
 .servico {
   padding: 30px 0px;
 }
-
 @media (min-width: 768px) {
   .servico {
     overflow: auto;
@@ -830,7 +796,6 @@ img {
   text-align: center;
   padding: 0px 15px;
 }
-
 @media (min-width: 768px) {
   .servico__item {
     float: left;
@@ -851,11 +816,9 @@ img {
   padding: 50px 0px;
   padding-top: 150px;
 }
-
 .cabecalho-home__role {
   display: none;
 }
-
 @media (min-width: 992px) {
   .cabecalho-home {
     height: 100vh;
@@ -876,7 +839,6 @@ img {
     margin-left: -115px;
   }
 }
-
 @media (min-width: 1200px) {
   .cabecalho-home {
     background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
@@ -884,12 +846,10 @@ img {
     background-size: cover;
   }
 }
-
 .cabecalho-home__titulo {
   font-size: 30px;
   margin-bottom: 0;
 }
-
 .cabecalho-home__subtitulo {
   display: block;
   font-size: 15px;
@@ -903,18 +863,16 @@ img {
   text-transform: uppercase;
   margin-bottom: 55px;
 }
-
 .home__titulo::after {
-  content: '';
+  content: "";
   display: block;
   width: 50px;
   height: 3px;
-  background-color: #fff;
+  background-color: #f44242;
   margin: 0px auto;
   margin-top: 15px;
 }
-
-.home__titulo__titulo--branco::after {
+.home__titulo--branco::after {
   background-color: #fff;
 }
 
@@ -940,4 +898,3 @@ img {
   border-left: 1px solid #000;
   padding-left: 15px;
 }
-/*# sourceMappingURL=estilo.css.map */
