--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -69,12 +69,12 @@
         display: block;
         width: 50px;
         height: 3px;
-        background-color: #fff;
+        background-color: $cor-principal;
         margin: 0px auto;
         margin-top: 15px;
     }
 
-    &__titulo--branco::after {
+    &--branco::after {
         background-color: #fff;
     }
 }
